# org.gnutls-gnutls

./: CMakeLists.txt  build_artifact.py  dependency-log.xml
.github/workflows/: main.yml
cmake/tools/: fix_pkgconfig.py  generate_hash.py
gnutls/: CMakeLists.txt
gnutls/installer/: gnutls.xml  install.lua
